planner-dc-svc-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planner
  namespace: fse-planner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: planner
  template:
    metadata:
      labels:
        app: planner
    spec:
      imagePullSecrets:
        - name: pipeline-docker-registry
      containers:
        - name: planner
          image: ${CICD_IMAGE}:v1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: planner-service
  namespace: fse-planner
spec:
  type: ClusterIP
  ports:
    - name: planner-port
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: planner

---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: planner-ingress
  namespace: fse-planner
spec:
  rules:
    - host: austinbspencer.com/fse-planner
      http:
        paths:
          - path: /
            backend:
              serviceName: planner-service
              servicePort: planner-port
